fix: update deprecated API docs endpoints (#463)
